--- a/bracelets.html
+++ b/bracelets.html
@@ -272,7 +272,7 @@
       <p class="item-title">Funky Ruby & Watch Bracelet</p>
       <p class="item-subtitle">Funky and fun handmade raw ruby and recycled watches.</p>
       <p class="item-price">$229.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Bracelet%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -285,7 +285,7 @@
       <p class="item-title">Cabochon Onyx Cuff</p>
       <p class="item-subtitle">Handmade tricolor metal with onyx cabochon cuff.</p>
       <p class="item-price">$59.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Bracelet%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -298,7 +298,7 @@
       <p class="item-title">Sterling Silver Textured Link</p>
       <p class="item-subtitle">Textured link bracelet made from sterling silver.</p>
       <p class="item-price">$59.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Bracelet%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -311,7 +311,7 @@
       <p class="item-title">Fire Opal Link</p>
       <p class="item-subtitle">Sterling silver and fire opal 7" link bracelet./p>
       <p class="item-price">$99.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Bracelet%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -324,7 +324,7 @@
       <p class="item-title">Prehnite Stretch Bracelet</p>
       <p class="item-subtitle">Wide stretch bracelet made from prehnite.</p>
       <p class="item-price">$39.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Bracelet%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -337,7 +337,7 @@
       <p class="item-title">Turquoise Link Bracelet</p>
       <p class="item-subtitle">Sterling silver and turquoise link.</p>
       <p class="item-price">$129.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Bracelet%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -350,7 +350,7 @@
       <p class="item-title">Lavender Jade Bracelet</p>
       <p class="item-subtitle">Bracelet made from sterling silver and lavender jade.</p>
       <p class="item-price">$139.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Bracelet%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -363,7 +363,7 @@
       <p class="item-title">Chalcedony Quartz & Agate Bracelet</p>
       <p class="item-subtitle">Chalcedony quartz and agate bracelet made by Nicole.</p>
       <p class="item-price">$49.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Bracelet%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -376,7 +376,7 @@
       <p class="item-title">Sterling Silver & Cubic Zirconia Bracelet</p>
       <p class="item-subtitle">7" with silver clasp.</p>
       <p class="item-price">$79.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Bracelet%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
