--- a/deals.html
+++ b/deals.html
@@ -238,8 +238,8 @@
     <div class="item-desc">
       <p class="item-title">Citrine and Apatite Pendant</p>
       <p class="item-subtitle">18" solid sterling silver curb chain with a citrine and apatite drop.</p>
-      <p class="item-price"><strike>$279.00</strike> $159.00</p>
-      <button class="ui blue button">Inquire</button>
+      <p class="item-price"><strike>$279.00</strike> <span style="color:#7aa2cf">$159.00</span></p>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Deals%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -251,8 +251,8 @@
     <div class="item-desc">
       <p class="item-title">Starfish Cuff</p>
       <p class="item-subtitle">Large sparkly starfish cuff bracelet.</p>
-      <p class="item-price"><strike>$59.00</strike> $39.00</p>
-      <button class="ui blue button">Inquire</button>
+      <p class="item-price"><strike>$59.00</strike> <span style="color:#7aa2cf">$39.00</span></p>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Deals%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -264,8 +264,8 @@
     <div class="item-desc">
       <p class="item-title">Mid-Century Copper Necklace</p>
       <p class="item-subtitle">Copper choker with white sugar enamel stations 16" - 18".</p>
-      <p class="item-price"><strike>$139.00</strike> $99.00</p>
-      <button class="ui blue button">Inquire</button>
+      <p class="item-price"><strike>$139.00</strike> <span style="color:#7aa2cf">$99.00</span></p>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Deals%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -277,8 +277,8 @@
     <div class="item-desc">
       <p class="item-title">Tri-Color Pearl & Tiger Eye</p>
       <p class="item-subtitle">Earrings made of tri-color pearl and tiger eye.</p>
-      <p class="item-price"><strike>$69.00</strike> $45.00</p>
-      <button class="ui blue button">Inquire</button>
+      <p class="item-price"><strike>$69.00</strike> <span style="color:#7aa2cf">$45.00</span></p>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Deals%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -290,8 +290,8 @@
     <div class="item-desc">
       <p class="item-title">1970s Enamel Drops</p>
       <p class="item-subtitle">1970s enamel drops earrings.</p>
-      <p class="item-price"><strike>$25.00</strike> $15.00</p>
-      <button class="ui blue button">Inquire</button>
+      <p class="item-price"><strike>$25.00</strike> <span style="color:#7aa2cf">$15.00</span></p>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Deals%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -303,8 +303,8 @@
     <div class="item-desc">
       <p class="item-title">Faceted Green Agate</p>
       <p class="item-subtitle">7" with silver clasp.</p>
-      <p class="item-price"><strike>$69.00</strike> $49.00</p>
-      <button class="ui blue button">Inquire</button>
+      <p class="item-price"><strike>$69.00</strike> <span style="color:#7aa2cf">$49.00</span></p>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Deals%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
