--- a/earrings.html
+++ b/earrings.html
@@ -267,7 +267,7 @@
       <p class="item-title">Swarovski Crystal Element Hoops</p>
       <p class="item-subtitle">Simple hoops made with Swarovski crystal elements, available on all colors.</p>
       <p class="item-price">$39.00 each</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Earrings%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -280,7 +280,7 @@
       <p class="item-title">Amethyst & Pearl Earrings</p>
       <p class="item-subtitle">18 karat gold-plated amethyst and pearls from Brazil.</p>
       <p class="item-price">$69.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Earrings%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -293,7 +293,7 @@
       <p class="item-title">Sterling Silver Drops</p>
       <p class="item-subtitle">Sterling silver hammered and bright drop earrings.</p>
       <p class="item-price">$39.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Earrings%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -306,7 +306,7 @@
       <p class="item-title">Gray Pearl Drops</p>
       <p class="item-subtitle">Pear-shaped gray pearl & silver drops.</p>
       <p class="item-price">$20.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Earrings%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -319,7 +319,7 @@
       <p class="item-title">Etruscan Revival Drops</p>
       <p class="item-subtitle">14 karat yellow gold Etruscan revival drop earrings. Circa 1920s.</p>
       <p class="item-price">$599.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Earrings%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -332,7 +332,7 @@
       <p class="item-title">Tahitian Pearl & Diamond Earrings</p>
       <p class="item-subtitle">14 karat white gold Tahitian pearl and diamonds.</p>
       <p class="item-price">$699.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Earrings%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -345,7 +345,7 @@
       <p class="item-title">Fire Opal Starfish Earrings</p>
       <p class="item-subtitle">Sterling silver fire and opal starfish earrings.</p>
       <p class="item-price">$69.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Earrings%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -358,7 +358,7 @@
       <p class="item-title">Sterling Silver Amethyst Drops</p>
       <p class="item-subtitle">Drop earrings made of sterling silver and amethyst.</p>
       <p class="item-price">$39.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Earrings%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -371,7 +371,7 @@
       <p class="item-title">Saturn Earrings</p>
       <p class="item-subtitle">Saturn-shaped earrings with silver wires.</p>
       <p class="item-price">$19.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Earrings%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
