--- a/favorites.html
+++ b/favorites.html
@@ -273,7 +273,7 @@
       <p class="item-title">Whimsical Octopus Pendant</p>
       <p class="item-subtitle">Lovely pendant/brooch on strap.</p>
       <p class="item-price">$69.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Favorites%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -286,7 +286,7 @@
       <p class="item-title">Seahorse Pendant</p>
       <p class="item-subtitle">Handmade, 6" high sterling silver seahorse &mdash; guaranteed compliments!</p>
       <p class="item-price">$899.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Favorites%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -299,7 +299,7 @@
       <p class="item-title">'Hobe' Gold-Tone Bracelet</p>
       <p class="item-subtitle">Signed 'Hobe' gold tone and crystal bracelet. Circa 1950.</p>
       <p class="item-price">$129.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Favorites%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -312,7 +312,7 @@
       <p class="item-title">Fire Opal & Lapis Ring</p>
       <p class="item-subtitle">Sterling silver inlay fire opal and lapis.</p>
       <p class="item-price">$79.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Favorites%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -325,7 +325,7 @@
       <p class="item-title">Sculptural Starfish Necklace</p>
       <p class="item-subtitle">Sculptural sterling silver starfish on chain.</p>
       <p class="item-price">$69.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Favorites%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -338,7 +338,7 @@
       <p class="item-title">Peacock Brooch</p>
       <p class="item-subtitle">Major bling (5" high!) peacock brooch.</p>
       <p class="item-price">$59.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Favorites%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -351,7 +351,7 @@
       <p class="item-title">Victorian Serpent with Cat’s Eye Ring</p>
       <p class="item-subtitle">18 karat yellow gold Victorian serpent/dragon design complete with cat’s eye.</p>
       <p class="item-price">$1,999.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Favorites%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -365,7 +365,7 @@
       <p class="item-title">Handmade Aluminum Earrings</p>
       <p class="item-subtitle">Lightweight and artistic.</p>
       <p class="item-price">$59.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Favorites%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -378,7 +378,7 @@
       <p class="item-title">Tree of Life Set</p>
       <p class="item-subtitle">Sterling silver "Tree of Life" necklace and earrings. Comes as a set.</p>
       <p class="item-price">$69.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Favorites%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
