--- a/necklaces.html
+++ b/necklaces.html
@@ -270,7 +270,7 @@
       <p class="item-title">Fire Opal Starfish Necklace</p>
       <p class="item-subtitle">Sterling silver fire opal starfish.</p>
       <p class="item-price">$79.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Necklace%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -283,7 +283,7 @@
       <p class="item-title">Silver & Amethyst Pendant</p>
       <p class="item-subtitle">Handmade tricolor metal with onyx cabochon cuff.</p>
       <p class="item-price">$99.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Necklace%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -296,7 +296,7 @@
       <p class="item-title">Silver Plated Larimar</p>
       <p class="item-subtitle">Silver-plated larimar necklace.</p>
       <p class="item-price">$129.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Necklace%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -309,7 +309,7 @@
       <p class="item-title">Gold Tone Cubic Zirconia</p>
       <p class="item-subtitle">16" gold-tone cubic zirconia on stations.</p>
       <p class="item-price">$69.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Necklace%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -322,7 +322,7 @@
       <p class="item-title">Tricolor Necklace</p>
       <p class="item-subtitle">Large, fun and funky fashion necklace.</p>
       <p class="item-price">$49.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Necklace%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -335,7 +335,7 @@
       <p class="item-title">Shell Necklace</p>
       <p class="item-subtitle">Shell and wood 18" long necklace.</p>
       <p class="item-price">$29.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Necklace%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -348,7 +348,7 @@
       <p class="item-title">Icelandic Pendant</p>
       <p class="item-subtitle">14 karat 16" designer pendant from Iceland.</p>
       <p class="item-price">$299.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Necklace%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -362,7 +362,7 @@
       <p class="item-title">62" Pearl Strand</p>
       <p class="item-subtitle">62" knotted freshwater pearl strand.</p>
       <p class="item-price">$129.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Necklace%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -375,7 +375,7 @@
       <p class="item-title">Multicolored Sapphire Pendant</p>
       <p class="item-subtitle">14 karat white gold 16" multi-colored sapphire pendant.</p>
       <p class="item-price">$699.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Necklace%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
