--- a/scarves.html
+++ b/scarves.html
@@ -217,7 +217,7 @@
       <p class="item-title">Blue Leaf With Fringe</p>
       <p class="item-subtitle">Fringed scarf with a blue leaf design. Available in several colors.</p>
       <p class="item-price">$29.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Scarf%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -230,7 +230,7 @@
       <p class="item-title">Silk Scarf</p>
       <p class="item-subtitle">Red scarf made of 100% Chinese silk.</p>
       <p class="item-price">$79.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Scarf%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -243,7 +243,7 @@
       <p class="item-title">Gray Leaf With Fringe</p>
       <p class="item-subtitle">Fringed scarf with a gray leaf design. Available in several colors.</p>
       <p class="item-price">$29.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Scarf%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -256,7 +256,7 @@
       <p class="item-title">Blue Ruffled Scarf</p>
       <p class="item-subtitle">Blue scarf with a ruffled design by Meredith.</p>
       <p class="item-price">$29.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Scarf%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
