Removed image from mobile view

--- a/visit.html
+++ b/visit.html
@@ -157,7 +157,7 @@
       </div>
     </div>
 
-    <img class="ui huge centered image" src="images/visit1.jpg" />
+    <img class="ui huge centered image visit-img" src="images/visit1.jpg" />
   </div>
 
   <ng-include src="'partials/footer.html'"></ng-include>
