--- a/faq.html
+++ b/faq.html
@@ -161,7 +161,8 @@
         <p>Does Jewels By The Sea create custom jewelry?</p>
       </div>
       <div class="ui secondary segment">
-        <p><b>Yes</b> &mdash; with my Graduate Jeweler status and over 3 years in the jewelry business, I LOVE to help people create that unique and wonderful piece of jewelry just for you. I have custom designed wedding sets, right hand rings, and fashion jewelry for many of my clients throughout the years. It gives me great joy to help you create a unique piece of jewelry that will become an heirloom for generations to come.</p>
+        <p><b>Yes</b> &mdash; with my Graduate Jeweler status and over 35 years in the jewelry business, I LOVE to help people create that unique piece of jewelry just for you. </p>
+        <p>I have custom designed wedding sets, right hand rings, and fashion jewelry for my clients. It gives me great joy to help you create something that will become an heirloom for generations to come.</p>
       </div>
     </div>
 
@@ -171,8 +172,9 @@
         <p>Does Jewels By The Sea do jewelry repair?</p>
       </div>
       <div class="ui secondary segment">
-        <p><b>Yes</b>, we have excellent jewelry and watch repair. I have used my bench jeweler ( a repair and custom design genius) and my watchmaker for over 30 years (both people were the "go to" guys for the jewelry chain I worked at for 22 years).</p>
-        <p>We repair all kinds of jewelry and watches. In the modern world, many jewelers say no to estate jewelry repair because of the risks involved, but we say yes, and have returned many family heirloom pieces back into wearable treasures. We also will work on pieces that may not have a lot of intrinsic value, but mean something very special to you.</p>
+        <p><b>Yes</b>, we have excellent jewelry and watch repair. I have used my bench jeweler and my watchmaker for over 30 years.</p>
+        <p>We repair all kinds of jewelry and watches. In the modern world, many jewelers say no to estate jewelry repair because of the risks involved, but we say yes, and have returned many family heirloom pieces back into wearable treasures. </p>
+        <p>We also will work on pieces that may not have a lot of intrinsic value, but mean something very special to you.</p>
       </div>
     </div>
 
@@ -182,9 +184,8 @@
         <p>What is a Graduate Gemologist?</p>
       </div>
       <div class="ui secondary segment">
-        <p>GIA, or the <a href="http://www.gia.edu/">Gemological Institute of America</a>, is <i>the</i> training authority in the American jewelry industry. The most prestigious credential in the industry, the GIA Graduate Gemologist program gives a person the comprehensive knowledge of diamonds and colored stones you need to succeed anywhere in the jewelry industry.</p>
-        <p>To earn a Graduate Gemologist degree from the GIA, you must invest a substantial amount of work to complete five course studies and three lab classes, as well as a comprehensive final exam.</p>
-        <p>There are 8 requirements of study, including Diamonds and Diamond Grading, Colored Stone Essentials, Gem Identification, and various grading and identification labs. </p>
+        <p>GIA, or the <a href="http://www.gia.edu/" target="_blank">Gemological Institute of America</a>, is <i>the</i> training authority in the American jewelry industry. The GIA Graduate Gemologist program is the most prestigious credential in the industry.</p>
+        <p>A Graduate Gemologist degree from the GIA requires rigorous study in many areas, including Diamonds and Diamond Grading, Colored Stone Essentials, Gem Identification, and various grading and identification labs.</p>
       </div>
     </div>
 
@@ -195,7 +196,7 @@
       </div>
       <div class="ui secondary segment">
         <p>I hand pick every item in the store; Jewels By The Sea has jewelry from dozens of countries as well as La Jolla and San Diego artists. I also pick jewelry from estate and vintage sales. Whenever I travel, I find artists from the area I'm visiting and set up appointments to assess the possibility of adding another unique line to my inventory. </p>
-        <p>I also have a wide variety of price points ($5 - $5,000) and a variety of styles to appeal to every client (at least, that's my goal!)</p>
+        <p>I also have a wide variety of price points ($5 - $5,000) and a variety of styles to appeal to every client.</p>
       </div>
     </div>
 
@@ -210,7 +211,7 @@
           <div class="item">
             <i class="diamond icon"></i>
             <div class="content">
-              <div class="description"><b>Avoid buildup</b>. Visit your jewelry at least once a year to have your fine jewelry professionally cleaned and inspected for potential problems.</div>
+              <div class="description"><b>Avoid buildup</b>. Visit your jeweler at least once a year to have your fine jewelry professionally cleaned and inspected.</div>
             </div>
           </div>
           
@@ -238,7 +239,7 @@
           <div class="item">
             <i class="diamond icon"></i>
             <div class="content">
-              <div class="description">Pearls are easily damaged by an array of personal products like cosmetics and lotions.</div>
+              <div class="description">Pearls are easily damaged by personal products like cosmetics and lotions.</div>
             </div>
           </div>
 
