Fixed visit.html link

--- a/visit.html
+++ b/visit.html
@@ -87,7 +87,7 @@
 
   <!-- BEGIN DESKTOP HEADER -->
   <div id="navbar">
-    <a class="item">HOME</a>
+    <a class="item" href="index.html">HOME</a>
     <a class="item" href="about.html">ABOUT</a>
     <a class="active item" href="visit.html">VISIT</a>
     <a class="nav-products item">
