Updated broken links

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           <div class="column product-item">
             <div class="ui card">
               <div class="grid-hover">Artists</div>
-              <a class="image grid-hover-img" href="local.html">
+              <a class="image grid-hover-img" href="artists.html">
                 <img src="images/artists/local/1-thumb.png">
               </a>
             </div>
@@ -161,7 +161,7 @@
           <div class="column product-item">
             <div class="ui card">
               <div class="grid-hover">Rings</div>
-              <a class="image grid-hover-img" href="local.html">
+              <a class="image grid-hover-img" href="rings.html">
                 <img src="images/favorites/3-thumb.png">
               </a>
             </div>
