--- a/artists.html
+++ b/artists.html
@@ -349,15 +349,15 @@
               <i class="dropdown icon"></i>
               <div class="default text">Artists</div>
               <div class="menu">
-                <div class="item"><a class="" href="#">Estate & Vintage</a></div>
-                <!--<div class="item"><a class="" href="artists.html">Artists</a></div>-->
-                <div class="item"><a class="" href="rings.html">Rings</a></div>
-                <div class="item"><a class="" href="earrings.html">Earrings</a></div>
-                <div class="item"><a class="" href="bracelets.html">Bracelets</a></div>
-                <div class="item"><a class="" href="scarves.html">Scarves</a></div>
-                <div class="item"><a class="" href="necklaces.html">Necklaces & Pendants</a></div>
-                <div class="item"><a class="" href="favorites.html">Linda's Favorites</a></div>
-                <div class="item"><a class="" href="deals.html">Deals</a></div>
+                <a class="item" href="estatevintage.html">Estate & Vintage</a>
+                <!--<a class="item" href="artists.html">Artists</a>-->
+                <a class="item" href="rings.html">Rings</a>
+                <a class="item" href="earrings.html">Earrings</a>
+                <a class="item" href="bracelets.html">Bracelets</a>
+                <a class="item" href="scarves.html">Scarves</a>
+                <a class="item" href="necklaces.html">Necklaces & Pendants</a>
+                <a class="item" href="favorites.html">Linda's Favorites</a>
+                <a class="item" href="deals.html">Deals</a>
               </div>
             </div>
           </div>
