--- a/favorites.html
+++ b/favorites.html
@@ -242,7 +242,7 @@
               <i class="dropdown icon"></i>
               <div class="default text">Linda's Favorites</div>
               <div class="menu">
-                <div class="item"><a class="" href="#">Estate & Vintage</a></div>
+                <div class="item"><a class="" href="estatevintage.html">Estate & Vintage</a></div>
                 <div class="item"><a class="" href="artists.html">Artists</a></div>
                 <div class="item"><a class="" href="rings.html">Rings</a></div>
                 <div class="item"><a class="" href="earrings.html">Earrings</a></div>
