--- a/bracelets.html
+++ b/bracelets.html
@@ -309,7 +309,7 @@
     <img class="ui centered medium image" src="images/bracelets/4-full.png">
     <div class="item-desc">
       <p class="item-title">Fire Opal Link</p>
-      <p class="item-subtitle">Sterling silver and fire opal 7" link bracelet./p>
+      <p class="item-subtitle">Sterling silver and fire opal 7" link bracelet.</p>
       <p class="item-price">$99.00</p>
       <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Bracelet%20Inquiry">Inquire</a>
     </div>
