--- a/favorites.html
+++ b/favorites.html
@@ -296,9 +296,9 @@
   <div class="content">
     <img class="ui centered medium image" src="images/favorites/3-full.png">
     <div class="item-desc">
-      <p class="item-title">'Hobe' Gold-Tone Bracelet</p>
-      <p class="item-subtitle">Signed 'Hobe' gold tone and crystal bracelet. Circa 1950.</p>
-      <p class="item-price">$129.00</p>
+      <p class="item-title">Fire Opal & Lapis Ring</p>
+      <p class="item-subtitle">Sterling silver inlay fire opal and lapis.</p>
+      <p class="item-price">$79.00</p>
       <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Favorites%20Inquiry">Inquire</a>
     </div>
  </div>
@@ -309,9 +309,9 @@
   <div class="content">
     <img class="ui centered medium image" src="images/favorites/4-full.png">
     <div class="item-desc">
-      <p class="item-title">Fire Opal & Lapis Ring</p>
-      <p class="item-subtitle">Sterling silver inlay fire opal and lapis.</p>
-      <p class="item-price">$79.00</p>
+      <p class="item-title">Sculptural Starfish Necklace</p>
+      <p class="item-subtitle">Sculptural sterling silver starfish on chain.</p>
+      <p class="item-price">$69.00</p>
       <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Favorites%20Inquiry">Inquire</a>
     </div>
  </div>
@@ -322,9 +322,9 @@
   <div class="content">
     <img class="ui centered medium image" src="images/favorites/5-full.png">
     <div class="item-desc">
-      <p class="item-title">Sculptural Starfish Necklace</p>
-      <p class="item-subtitle">Sculptural sterling silver starfish on chain.</p>
-      <p class="item-price">$69.00</p>
+      <p class="item-title">Classic Pearl Strand Necklace</p>
+      <p class="item-subtitle">64" long, knotted pearl strand.</p>
+      <p class="item-price">$129.00</p>
       <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Favorites%20Inquiry">Inquire</a>
     </div>
  </div>
