--- a/artists.html
+++ b/artists.html
@@ -178,7 +178,7 @@
                 <img src="images/artists/world/5-thumb.png">
               </div>
               <div class="content">
-                <a class="header"><i class="world icon"></i> Sea Life Pendant</a>
+                <a class="header"><i class="world icon"></i> Turquoise & Malachite Cuff</a>
               </div>
             </div>
           </div>
@@ -266,7 +266,7 @@
                 <img src="images/artists/local/9-thumb.png">
               </div>
               <div class="content">
-                <a class="header"><i class="home icon"></i> Red Coral Necklace by Carol</a>
+                <a class="header"><i class="home icon"></i> Yoga Pose Earrings</a>
               </div>
             </div>
           </div>
@@ -323,7 +323,7 @@
                 <img src="images/artists/local/7-thumb.png">
               </div>
               <div class="content">
-                <a class="header"><i class="home icon"></i> Shell, Pearl, Crystal and Rose Quartz by Valerie</a>
+                <a class="header"><i class="home icon"></i> African Glass Bead Bracelet by Linda</a>
               </div>
             </div>
           </div>
@@ -377,9 +377,9 @@
   <div class="content">
     <img class="ui centered medium image" src="images/artists/world/1-full.png">
     <div class="item-desc">
-      <p class="item-title">Brazilian Overlay Necklace</p>
-      <p class="item-subtitle">22"-24" 18 karat overlay necklace. Made in Brazil.</p>
-      <p class="item-price">$79.00</p>
+      <p class="item-title">Cultured Pearl Earrings by Valerie</p>
+      <p class="item-subtitle">Cultured pearl clusters by Valerie.</p>
+      <p class="item-price">$29.00</p>
       <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=World%20Jewelry%20Inquiry">Inquire</a>
     </div>
  </div>
@@ -495,7 +495,7 @@
   <div class="content">
     <img class="ui centered medium image" src="images/artists/local/1-full.png">
     <div class="item-desc">
-      <p class="item-title">Sterling Silver Art Nouveau Design Cuff</p>
+      <p class="item-title">Moonstone Bracelets by Nicole</p>
       <p class="item-subtitle">Moonstone in gold tone by Nicole.</p>
       <p class="item-price">$39.00</p>
       <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Local%20Jewelry%20Inquiry">Inquire</a>
@@ -508,7 +508,7 @@
   <div class="content">
     <img class="ui centered medium image" src="images/artists/local/2-full.png">
     <div class="item-desc">
-      <p class="item-title">Onyx & Marcasite Ring</p>
+      <p class="item-title">Cultured Pearl Earrings by Valerie</p>
       <p class="item-subtitle">Cultured pearl clusters by Valerie.</p>
       <p class="item-price">$29.00</p>
       <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Local%20Jewelry%20Inquiry">Inquire</a>
