--- a/artists.html
+++ b/artists.html
@@ -334,7 +334,7 @@
                 <img src="images/artists/local/8-thumb.png">
               </div>
               <div class="content">
-                <a class="header"><i class="home icon"></i> Yoga Pose & Bead Earrings by Anonymous</a>
+                <a class="header"><i class="home icon"></i> Shell, Pearl, Crystal and Rose Quartz by Valerie</a>
               </div>
             </div>
           </div>
@@ -377,9 +377,9 @@
   <div class="content">
     <img class="ui centered medium image" src="images/artists/world/1-full.png">
     <div class="item-desc">
-      <p class="item-title">Cultured Pearl Earrings by Valerie</p>
-      <p class="item-subtitle">Cultured pearl clusters by Valerie.</p>
-      <p class="item-price">$29.00</p>
+      <p class="item-title">Brazilian Overlay Necklace</p>
+      <p class="item-subtitle">22"-24" 18 karat overlay necklace. Made in Brazil.</p>
+      <p class="item-price">$79.00</p>
       <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=World%20Jewelry%20Inquiry">Inquire</a>
     </div>
  </div>
